Display scrollbar all the time to make sure content does not shift when clicking on menu

--- a/plugins/Zeitgeist/stylesheets/general/_default.less
+++ b/plugins/Zeitgeist/stylesheets/general/_default.less
@@ -108,3 +108,8 @@ a {
     margin: 0 10px;
     position: relative;
 }
+
+/* Make sure the scroll bar is always displayed so the content does not shift when reloading menu with/without scrollbar */
+html {
+  overflow-y: scroll;
+}
